[package]
name = "libfftt"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
log = "0.4.25"
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
