[package]
name = "libfftt"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Une bibliothèque Rust pour interagir avec l'API de la Fédération Française de Tennis de Table (FFTT), permettant d'accéder aux informations sur les joueurs, clubs, compétitions et classements."
repository = "https://github.com/matlink/libfftt"
readme = "README.md"
include = [
    "src/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "CHANGELOG.md",
    "LICENSE",
    "README.md"
]

[dependencies]
chrono = "0.4.22"
log = "0.4.25"
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
